labs/docker/k8s-test/bbb-greenlight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bbb-greenlight
    version: latest
  name: bbb-greenlight
  namespace: bigbluebutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb-greenlight
      version: latest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bbb-greenlight
        version: latest
      name: bbb-web
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: greenlight-secret
#      - env:
#        - name: SERVER_DOMAIN
#          value: hadtechbbb.ga
#        - name: BIGBLUEBUTTON_SECRET
#          value: "db72992edcee72c894ad97a68b0f8d51"
#        - name: SECRET_KEY_BASE
#          value: "3a2fde6cc8c63f1734c5884d60c51f5cbeed453178079c1ca7711028836a879edb82557f2c212982ef3b45bc99960cf3da949a93e64e1c13f89fe1bdd73569b1"
#        - name: BIGBLUEBUTTON_ENDPOINT
#          value: "https://{SERVER_DOMAIN}/bigbluebutton/"
#        - name: env_name
#          value: sample.env
#        - name: POSTGRES_DB
#          value: postgres://host/postgres
#        - name: POSTGRES_USER
#          value: postgres
#        - name: POSTGRES_PASSWORD
#          value: password
        image: hoang000147/greenlight:v2-k8s-1.0
        imagePullPolicy: Always
        name: bbb-greenlight
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        bbb: bigbluebutton
#      tolerations:
#      - key: role
#        operator: Equal
#        value: 'bigbluebutton'
#        effect: NoSchedule

---
apiVersion: v1
kind: Service
metadata:
  name: bbb-greenlight
  namespace: bigbluebutton
#  annotations:
#    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
spec:
#  type: NodePort
  ports:
  - name: http
    targetPort: 80
    port: 80
#    nodePort: 31111
  selector:
    app: bbb-greenlight

#---
#apiVersion: v1
#kind: Secret
#metadata:
#  name: bbb-greenlight-secret
#type: Opaque
#data:
#  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMakNDQWhZQ0NRREFPRjl0THNhWFdqQU5CZ2txaGtpRzl3MEJBUXNGQURCYU1Rc3dDUVlEVlFRR0V3SlYKVXpFTE1Ba0dBMVVFQ0F3Q1EwRXhJVEFmQmdOVkJBb01HRWx1ZEdWeWJtVjBJRmRwWkdkcGRITWdVSFI1SUV4MApaREViTUJrR0ExVUVBd3dTWTJGbVpTNWxlR0Z0Y0d4bExtTnZiU0FnTUI0WERURTRNRGt4TWpFMk1UVXpOVm9YCkRUSXpNRGt4TVRFMk1UVXpOVm93V0RFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ01Ba05CTVNFd0h3WUQKVlFRS0RCaEpiblJsY201bGRDQlhhV1JuYVhSeklGQjBlU0JNZEdReEdUQVhCZ05WQkFNTUVHTmhabVV1WlhoaApiWEJzWlM1amIyMHdn [...]
#  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBcWVpcCs3TXZOYWRJN2lmM01wUHJ3Z0pwYkg0N1JUTnBybVRTdENyWG5LaHRuNDFrCkcrZWNVTldCUU5semtzQndHTDBuY0NObzJhN2x2S2wxd2k5cTIrQW1RaGNjS1ZSQXEzTVhZNXQ3WGxZa1YxYkcKQ0pwaVJ6ejBza0lLWXFHN1BjZXc1UzNPaUFRTkdZMURzcGRENmh2VWlYc1RGZTkxaUNHdWF3MVVoZHErSkVwRwp3SStBM0kreTEzaFpWVng5aU9WOEZ3cWJRcCt1eVFvT05uL3BQTUlNM0VWYWZGMlpHVm1WWThLdlVWQ2cxNWhRCmRtTWpkVnhGbldkSHNFYmltRkNaYkp1dmRySkRxeWtJOUw1S0Q1K05SQlAvazJsUkthaTAwYUZHTjY4NE93NUgKYzMzUVlzeFR0 [...]
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: bbb-greenlight-ingress
#  namespace: bigbluebutton
#  annotations:
#    kubernetes.io/ingress.class: "traefik"
#spec:
#  rules:
#  - host: hadtechbbb.ga
#    http:
#      paths:
#      - path: /b
#        backend:
#          serviceName: bbb-greenlight
#          servicePort: 80
