labs/docker/k8s-test/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
    version: latest
  name: mongo
  namespace: bigbluebutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      version: latest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo
        version: latest
      name: mongo
    spec:
      containers:
      - image: mongo:3.4
        imagePullPolicy: Always
        name: mongo
        ports:
        - containerPort: 27017
          protocol: TCP
#        volumeMounts:
#        -  name: mongo-persistent-storage
#           mountPath: /data/db
#  volumeClaimTemplates:
#  - metadata:
#      name: mongo-persistent-storage
#    annotations: 
#      volume.beta.kubernetes.io/storage-class: "fast"
#    spec:
#      accessModes: ["ReadWriteOnce"]
#      resources:
#        requests:
#          storage: 25Gi  
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        bbb: bigbluebutton
#      tolerations:
#      - key: role
#        operator: Equal
#        value: 'bigbluebutton'
#        effect: NoSchedule

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: bigbluebutton
spec:
  ports:
  - targetPort: 27017
    port: 27017
  selector:
    app: mongo
